--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -5,14 +5,6 @@ on:
     branches: [ "master" ]
   pull_request:
 
-permissions:
-  repository-projects: write
-  actions: write
-  checks: write
-  contents: write
-  deployments: write
-  id-token: write
-
 jobs:
   call-workflow-passing-data:
     uses: vishal-bulbule/github-action-demo/.github/workflows/automate-readme.yml@master
@@ -42,11 +34,11 @@ jobs:
 
 
     # Generates an execution plan for Terraform
-    #- name: Terraform Plan
-     # run: terraform plan -input=false
+    - name: Terraform Plan
+      run: terraform plan -input=false
 
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    #- name: Terraform Apply
-     # run: terraform apply -auto-approve -input=false
+    - name: Terraform Apply
+      run: terraform apply -auto-approve -input=false
